# token-2022

./: Cargo.toml
confidential-transfer/ciphertext-arithmetic/: Cargo.toml
confidential-transfer/elgamal-registry/: Cargo.toml
confidential-transfer/proof-extraction/: Cargo.toml
confidential-transfer/proof-generation/: Cargo.toml
confidential-transfer/proof-generation/src/: burn.rs  mint.rs  transfer.rs  transfer_with_fee.rs
confidential-transfer/proof-tests/: Cargo.toml
program/: Cargo.toml
program/src/: offchain.rs  processor.rs
