[package]
name = "spl-token-confidential-transfer-proof-extraction"
version = "0.3.0"
description = "Solana Program Library Confidential Transfer Proof Extraction"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.22.0"
solana-account-info = "2.2.1"
solana-curve25519 = "2.2.0"
solana-instruction = "2.2.1"
solana-instructions-sysvar = "2.2.1"
solana-msg = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = { version = "2.3.0", default-features = false }
solana-sdk-ids = "2.2.1"
solana-zk-sdk = {git = "https://github.com/BigMan2001/agave", branch = "geyser_txn_accounts_data"}
spl-pod = "0.5.1"
thiserror = "2.0.12"
