[package]
name = "spl-token-confidential-transfer-proof-generation"
version = "0.4.0"
description = "Solana Program Library Confidential Transfer Proof Generation"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
curve25519-dalek = "4.1.3"
solana-zk-sdk = {git = "https://github.com/BigMan2001/agave", branch = "geyser_txn_accounts_data"}
thiserror = "2.0.12"

[lints]
workspace = true
